Change Member Names
Attempted to change names in web

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <img src="img/adolf-zika-872335_640.jpg" class="img-responsive animated zoomIn" alt="member"/>
 
                     <h3 class="text-center mg-md">
-                        JohnDoe
+                        Andrew O'hair
                     </h3>
 
                     <p class="text-center">
