Attempted to change more names.
Adding another commit

--- a/index.html
+++ b/index.html
@@ -219,29 +219,29 @@
                     </h3>
 
                     <p class="text-center">
-                        Web Developer
+                        Media and Outreach
                     </p>
                 </div>
                 <div class="col-sm-3">
                     <img src="img/castro-1080873_640.jpg" class="img-responsive animated zoomIn animDelay02" alt="member"/>
 
                     <h3 class="text-center mg-md">
-                        Jane Doe
+                        Karl Parks
                     </h3>
 
                     <p class="text-center">
-                        Designer
+                        Design Lead
                     </p>
                 </div>
                 <div class="col-sm-3">
                     <img src="img/woman-868571_640.jpg" class="img-responsive animDelay04 animated zoomIn" alt="member"/>
 
                     <h3 class="text-center mg-md">
-                        Jane Doe
+                        Satan
                     </h3>
 
                     <p class="text-center">
-                        Marketing manager
+                        Everything Lead
                     </p>
                 </div>
                 <div class="col-sm-3">
