--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             data-typer-targets="ARE ROCKET PROJECT,BUILD ROCKETS,FLY ROCKETS"></span></h3>
 
                     <p class="text-center  mg-lg animated fadeInUp animDelay02">
-                        The San Diego State University Rocket Project is a team of highly students who design, fabricate, and fly suborbital launch vehicles with the goal of expanding the craft of collegiate rocketry. With over ten years of experience, the SDSU Rocket Project is a leader in producing consistent and quality results.
+                        The San Diego State University Rocket Project is a team of highly skilled students who design, fabricate, and fly suborbital launch vehicles with the goal of expanding the craft of collegiate rocketry. With over ten years of experience, the SDSU Rocket Project is a leader in producing consistent and quality results.
                     </p>
 
                     <div class="text-center">
