--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
     <!-- Navigation Bloc END -->
 
     <!-- header -->
-    <div class="bloc bgc-outer-space bg-city-overlay d-bloc" id="header">
+    <div class="bloc bgc-outer-space bg-rocket-overlay d-bloc" id="header">
         <div class="container bloc-xl">
             <div class="row">
                 <div class="col-sm-12">
                     <h3 class="text-center mg-lg tc-white">WE <span
                             data-typer-targets="ARE ROCKET PROJECT,BUILD ROCKETS,FLY ROCKETS"></span></h3>
 
-                    <p class="text-center  mg-lg animated fadeInUp animDelay02">
+                    <p class="text-center  mg-lg tc-white animated fadeInUp animDelay02">
                         The San Diego State University Rocket Project is a team of highly students who design, fabricate, and fly suborbital launch vehicles with the goal of expanding the craft of collegiate rocketry. With over ten years of experience, the SDSU Rocket Project is a leader in producing consistent and quality results.
                     </p>
 
@@ -81,7 +81,7 @@
             </div>
         </div>
     </div>
-    <!-- header END -->
+    <!-- END -->
 
     <!-- About -->
     <div class="bloc l-bloc bgc-white" id="about">
